--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,7 @@ body{
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: grab;
 }
 .span{
     color: #FD6E0A;
@@ -55,7 +56,88 @@ nav li a{
 }
 header{
     background-color: #FFF8F3;
+    background: url(../images/developer.png),url(../images/header_bg.png),#FFF8F3;
+    background-repeat: no-repeat;
+    background-position: top left,bottom right;
     padding-top: 50px;
+    }
+#banner{
+    /* border: 1px solid red; */
+    margin: 47px 38px 0 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600px;
+    color: #474747;
+}
+#banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-top: 5px;
+}
+   #banner .banner-content p{
+    margin-top: 20px;
+    font-size: 18;
+    font-weight: 400px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
     
 
+   }
+   #banner .banner-content{
+    max-width: 585px;
+   }
+   #banner .banner-image img{
+    max-width: 584px;
+    vertical-align: middle;
+   }
+   #about{
+    border: 1px solid red;
+    padding-top: 130px;
+   }
+   #about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+   text-align: center;
+   background-color: #FFF8F3;
+   padding: 131px 157px;
+
+   }
+    .section-heading{
+        max-width: 857px;
+        text-align: center;
+    }
+    .section-heading h2{
+        font-size: 35px;
+        font-weight: 600px;
+        color: #181818;
+        padding-bottom: 30px;
+    }
+.section-heading p{
+    font-size: 18px;
+    font-weight: 400px;
+    color: #757575;
+    line-height: 30px;
+    padding-bottom: 30px;
+}
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+.about-container .info-card p {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400px;
+    line-height: 30px;
+}
+.about-container .info-card h4{
+    ont-size: 20px;
+    font-weight: 600px;
+    color: #474747;
 }
